Fixed chatbox + formatting

--- a/src/theme/app/_font.scss
+++ b/src/theme/app/_font.scss
@@ -1,6 +1,12 @@
-::-webkit-input-placeholder, body, button, input, select, textarea {
-  font-family: var(--font, 'Roboto'), 'Whitney';
+::-webkit-input-placeholder,
+body,
+button,
+input,
+select,
+textarea {
+	font-family: var(--font, 'Roboto'), 'Whitney';
 }
-html, span:not([class*=spinner_]):not([class*=spinnerItem]) {
-  backface-visibility: hidden !important;
+html,
+span:not([class*='spinner_']):not([class*='spinnerItem']) {
+	backface-visibility: hidden !important;
 }
