--- a/src/theme/chat/_forum.scss
+++ b/src/theme/chat/_forum.scss
@@ -15,7 +15,7 @@
 		}
 		.titleContainer-2YK93J {
 			align-items: center;
-			gap: 12px
+			gap: 12px;
 		}
 		.prefixElement-1U4XhR {
 			margin: 0;
@@ -54,7 +54,7 @@
 			background: var(--background-light);
 		}
 	}
-	
+
 	// Sidebar
 	.sidebarCard-1Gn1ch {
 		background: var(--background-alt);
