--- a/src/theme/settings/user/_voicevideo.scss
+++ b/src/theme/settings/user/_voicevideo.scss
@@ -1,22 +1,22 @@
-#app-mount [aria-label="GUILD_SETTINGS"] {
-  .children_a6ae9b > .flex-1xMQg5.flex_ec1a20 {
-    background: var(--background-alt);
-    border-radius: var(--border-radius);
-    padding: 16px;
-  }
-  .micTest-bjZA-b {
-    background: var(--background-alt);
-    border-radius: var(--border-radius);
-    padding: 16px;
-    margin-top: 20px;
-    .marginTop8_f7730b {
-      margin-top: 0;
-    }
-  }
-  .container_e5cdf3 {
-    width: 530px !important;
-  }
-  .notches_e5cdf3 {
-    background: none;
-  }
+#app-mount [aria-label='GUILD_SETTINGS'] {
+	.children_a6ae9b > .flex-1xMQg5.flex_ec1a20 {
+		background: var(--background-alt);
+		border-radius: var(--border-radius);
+		padding: 16px;
+	}
+	.micTest-bjZA-b {
+		background: var(--background-alt);
+		border-radius: var(--border-radius);
+		padding: 16px;
+		margin-top: 20px;
+		.marginTop8_f7730b {
+			margin-top: 0;
+		}
+	}
+	.container_e5cdf3 {
+		width: 530px !important;
+	}
+	.notches_e5cdf3 {
+		background: none;
+	}
 }
