--- a/src/theme/app/_app.scss
+++ b/src/theme/app/_app.scss
@@ -1,13 +1,13 @@
 #app-mount .bg_d4b6c5 {
-  background: var(--background-dark);
+	background: var(--background-dark);
 }
 
 ::selection {
-  background: rgb(var(--accent), 1);
-  color: var(--accent-text);
+	background: rgb(var(--accent), 1);
+	color: var(--accent-text);
 }
 
 #app-mount .info_c5a741 .line_c5a741:first-child:before {
-  content: "MinimalCord " var(--minimalcord-version);
-  display: block;
+	content: 'MinimalCord ' var(--minimalcord-version);
+	display: block;
 }
