--- a/src/theme/popouts/_userpopout.scss
+++ b/src/theme/popouts/_userpopout.scss
@@ -25,7 +25,7 @@
 					position: absolute;
 					inset: 0;
 					background: inherit;
-					opacity: .15;
+					opacity: 0.15;
 					z-index: 0;
 					pointer-events: none;
 				}
@@ -64,7 +64,7 @@
 			background: transparent;
 			.overlayBackground-arbZMT,
 			.profileBadges-31rDHI {
-				background: var(--background)
+				background: var(--background);
 			}
 		}
 	}
